@startuml

title __SUDO_SOLVE.APP's Class Diagram__\n

  namespace com.zvibadash.sudosolve {
    class com.zvibadash.sudosolve.BuildConfig {
    }
  }
  

  namespace com.zvibadash.sudosolve {
    class com.zvibadash.sudosolve.Globals {
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.CaptureModeActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.CelebrateActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.HelpActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.HomeActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.InternetChangeListenerActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.LoginActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.LoginMenuTemplateActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.MainMenuTemplateActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.RegisterActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.SettingsActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.SolvingMenuTemplateActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.SudokuSolvingActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.TestingSessionsActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace activities {
      class com.zvibadash.sudosolve.activities.WelcomeActivity {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace database {
      class com.zvibadash.sudosolve.database.SSDBContract {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace database {
      class com.zvibadash.sudosolve.database.SSDBHelper {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace database {
      class com.zvibadash.sudosolve.database.Session {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace database {
      class com.zvibadash.sudosolve.database.SessionHandler {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.APIClient {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      interface com.zvibadash.sudosolve.networking.APIInterface {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      enum DifficultyLevel {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.NetworkChangeReceiver {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.RequestGeneration {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.RequestIdentify {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.RequestSolve {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.ResponseCheckConnection {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.ResponseGenerated {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.ResponseIdentify {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.ResponseSolved {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace sudokuboard {
      class com.zvibadash.sudosolve.sudokuboard.SudokuBoardView {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace sudokuboard {
      class com.zvibadash.sudosolve.sudokuboard.SudokuCoordinatesHolder {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace sudokuboard {
      class com.zvibadash.sudosolve.sudokuboard.SudokuDigit {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace sudokuboard {
      enum SudokuDigitType {
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace sudokuboard {
      abstract class com.zvibadash.sudosolve.sudokuboard.SudokuLogic {
      }
    }
  }
  

  com.zvibadash.sudosolve.activities.CaptureModeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.zvibadash.sudosolve.activities.CelebrateActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.zvibadash.sudosolve.activities.HelpActivity -up-|> com.zvibadash.sudosolve.activities.MainMenuTemplateActivity
  com.zvibadash.sudosolve.activities.HomeActivity -up-|> com.zvibadash.sudosolve.activities.MainMenuTemplateActivity
  com.zvibadash.sudosolve.activities.InternetChangeListenerActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.zvibadash.sudosolve.activities.InternetChangeListenerActivity o-- com.zvibadash.sudosolve.networking.NetworkChangeReceiver : ncr
  com.zvibadash.sudosolve.activities.LoginActivity -up-|> com.zvibadash.sudosolve.activities.LoginMenuTemplateActivity
  com.zvibadash.sudosolve.activities.LoginActivity o-- com.zvibadash.sudosolve.database.SSDBHelper : dbHelper
  com.zvibadash.sudosolve.activities.LoginMenuTemplateActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.zvibadash.sudosolve.activities.MainMenuTemplateActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.zvibadash.sudosolve.activities.RegisterActivity -up-|> com.zvibadash.sudosolve.activities.LoginMenuTemplateActivity
  com.zvibadash.sudosolve.activities.RegisterActivity o-- com.zvibadash.sudosolve.database.SSDBHelper : dbHelper
  com.zvibadash.sudosolve.activities.SettingsActivity -up-|> com.zvibadash.sudosolve.activities.MainMenuTemplateActivity
  com.zvibadash.sudosolve.activities.SolvingMenuTemplateActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.zvibadash.sudosolve.activities.SudokuSolvingActivity -up-|> com.zvibadash.sudosolve.activities.InternetChangeListenerActivity
  com.zvibadash.sudosolve.activities.TestingSessionsActivity -up-|> com.zvibadash.sudosolve.activities.MainMenuTemplateActivity
  com.zvibadash.sudosolve.activities.WelcomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.zvibadash.sudosolve.database.SSDBHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.zvibadash.sudosolve.networking.NetworkChangeReceiver -up-|> android.content.BroadcastReceiver
  com.zvibadash.sudosolve.networking.RequestGeneration o-- com.zvibadash.sudosolve.networking.DifficultyLevel : diffLevel
  com.zvibadash.sudosolve.sudokuboard.SudokuBoardView -up-|> android.view.View
  com.zvibadash.sudosolve.sudokuboard.SudokuDigit o-- com.zvibadash.sudosolve.sudokuboard.SudokuDigitType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
